force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/OriginalAssetReferenceId__c.field-meta.xml
<CustomField>
    <fullName>OriginalAssetReferenceId__c</fullName>
    <description>Temporary fields are used to keep track of the original AssetRefId (W-15007859)</description>
    <label>Original Asset Reference Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>