force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/PlusNet_End_Of_Minimum_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_End_Of_Minimum_Contract_Term__c</fullName>
    <formula>ADDMONTHS(vlocity_cmt__EffectiveStartDate__c,vlocity_cmt__ContractId__r.ContractTerm) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ende Mindestvertragslaufzeit</label>
    <type>Date</type>
</CustomField>