force-app/main/default/objects/vlocity_cmt__ContractLineItem__c/fields/PlusNet_Is_Root_Asset__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Is_Root_Asset__c</fullName>
    <formula>vlocity_cmt__AssetId__r.vlocity_cmt__ParentItemId__c = null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlusNet Is Root Asset</label>
    <type>Checkbox</type>
</CustomField>